# gitlab-redux

./: .gitignore  TRANSLATIONS.md  go.mod  porting_log.txt  prompts.md  ruby_to_go_conversions.txt  ruby_to_rust_conversions.txt  scratch.txt
rust_app/: Cargo.toml  README.md  TRANSLATIONS.md
rust_app/config/: default.yml
rust_app/src/: config.rs  lib.rs  main.rs
rust_app/src/auth/: doorkeeper.rs  impersonation.rs  mod.rs  security_policy.rs  session.rs  two_factor.rs
rust_app/src/components/: mod.rs
rust_app/src/components/diffs/: base.rs  mod.rs  overflow_warning.rs  stats.rs
rust_app/src/components/layouts/: crud.rs  empty_result.rs  horizontal_section.rs  mod.rs  page_heading.rs  settings_block.rs  settings_section.rs
rust_app/src/components/onboarding/: action_card.rs  mod.rs
rust_app/src/components/pajamas/: accordion_item.rs  alert.rs  avatar.rs  badge.rs  banner.rs  breadcrumb.rs  broadcast_banner.rs  button.rs  card.rs  checkbox.rs  checkbox_tag.rs  component.rs  empty_state.rs  mod.rs  progress.rs  radio.rs  radio_tag.rs  single_stat.rs  spinner.rs  toggle.rs
rust_app/src/components/rapid_diffs/: app.rs  diff_file.rs  diff_file_header.rs  merge_request_diff_file.rs  mod.rs  streaming_error.rs
rust_app/src/controllers/: groups_labels.rs  issuable_actions.rs  jira_connect_app_descriptor.rs  mod.rs  sessions.rs  users.rs  well_known.rs
rust_app/src/controllers/activity_pub/: mod.rs
rust_app/src/controllers/admin/: abuse_reports.rs  application.rs  applications.rs  background_jobs.rs  background_migrations.rs  batched_jobs.rs  broadcast_messages.rs  clusters.rs  cohorts.rs  dashboard.rs  deploy_keys.rs  dev_ops_report.rs  gitaly_servers.rs  groups.rs  health_check.rs  hook_logs.rs  hooks.rs  identities.rs  impersonation_tokens.rs  impersonations.rs  initial_setup.rs  instance_review.rs  integrations.rs  jobs.rs  keys.rs  labels.rs  mod.rs  organizations.rs  plan_limits.rs  projects.rs  runner_projects.rs  runners.rs  sessions.rs  settings.rs  slacks.rs  spam_logs.rs  system_info.rs  topics.rs  usage_trends.rs  users.rs  (+1 more)
rust_app/src/controllers/banzai/: mod.rs  uploads.rs
rust_app/src/controllers/clusters/: base.rs  clusters.rs  mod.rs
rust_app/src/controllers/concerns/: accepts_pending_invitations.rs  access_tokens_actions.rs  authenticates_with_two_factor.rs  authenticates_with_two_factor_for_admin_mode.rs  bizible_csp.rs  boards_actions.rs  check_initial_setup.rs  check_rate_limit.rs  checks_collaboration.rs  confirm_email_warning.rs  content_security_policy_patch.rs  continue_params.rs  controller_with_cross_project_access_check.rs  creates_commit.rs  cycle_analytics_params.rs  default_branch_protection.rs  diff_for_path.rs  enforces_admin_authentication.rs  enforces_two_factor_authentication.rs  filters_events.rs  find_snippet.rs  floc_opt_out.rs  gitlab_recaptcha.rs  graceful_timeout_handling.rs  group_tree.rs  hotlink_interceptor.rs  impersonation.rs  import_url_params.rs  initializes_current_user_mode.rs  internal_redirect.rs  invisible_captcha_on_signup.rs  issuable_actions.rs  issuable_collections.rs  issuable_collections_action.rs  issuable_links.rs  issuable_links_actions.rs  issuable_metadata.rs  issues_calendar.rs  kas_cookie.rs  (+70 more)
rust_app/src/graphql/: mod.rs  schema.rs  variables.rs
rust_app/src/handlers/: health.rs  home.rs  mod.rs  stages_controller.rs  summary_controller.rs
rust_app/src/models/: commit.rs  merge_request.rs  mod.rs  noteable.rs  project.rs  user.rs
rust_app/src/oauth/: device_authorizations.rs  mod.rs  token_info.rs
rust_app/src/rendering/: blob.rs  commits.rs  mod.rs  notes.rs  projects.rs
rust_app/src/services/: auth.rs  mod.rs  notes.rs  renders_assignees.rs
rust_app/src/templates/: index.html  mod.rs
rust_app/src/utils/: gon.rs  mod.rs  strong_memoize.rs  url_sanitizer.rs
rust_app/src/websocket/: channel.rs  connection.rs  logging.rs  mod.rs
(+827 files in other folders)
