[package]
name = "gitlab-redux"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "timeout", "fs"] }
hyper = { version = "1.0", features = ["server"] }

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"
tungstenite = "0.21"

# GraphQL
async-graphql = "5.0"
async-graphql-warp = "5.0"
async-graphql-actix-web = "5.0"
async-graphql-parser = "5.0"

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }

# Templates
tera = "1.19"

# Utilities
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
cookie = "0.18"
rand = "0.8"
async-trait = "0.1"
futures = "0.3"
sha2 = "0.10"
md5 = "0.7"

[dev-dependencies]
tokio-test = "0.4"
